--- a/src/style/button.scss
+++ b/src/style/button.scss
@@ -8,9 +8,13 @@
     font-size: 14px;
     border: none;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transition: $transition;
     &:hover {
         background-color: $hover;
+        color: #fff;
         &:before, &:after {
             border-color: $hover #fff;
         }
