--- a/src/components/charInfo/CharInfo.scss
+++ b/src/components/charInfo/CharInfo.scss
@@ -3,6 +3,7 @@
     padding: 25px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
     color: #000;
+    background-color: #fff;
     &__header {
         display: flex;
         gap: 25px;
