--- a/src/components/charItem/CharItem.scss
+++ b/src/components/charItem/CharItem.scss
@@ -10,7 +10,6 @@
     transition: $transition;
     &:hover {
         box-shadow: 0px 5px 20px #9F0013;
-        transform: translateY(-8px);
     }
     &__img {
         width: 200px;
@@ -29,4 +28,12 @@
         color: #fff;
         text-transform: uppercase;
     }
+    &_selected {
+        box-shadow: 0px 5px 20px #9F0013;
+        transform: translateY(-8px);
+    }
+    // &:focus {
+    //     box-shadow: 0px 5px 20px #9F0013;
+    //     transform: translateY(-8px);
+    // }
 }
