added form to search character via react-hook-form

--- a/src/components/charItem/CharItem.scss
+++ b/src/components/charItem/CharItem.scss
@@ -36,4 +36,18 @@
     //     box-shadow: 0px 5px 20px #9F0013;
     //     transform: translateY(-8px);
     // }
+    &-enter {
+        opacity: 0;
+    }
+    &-enter-active {
+        opacity: 1;
+        transition: opacity 500ms;
+    }
+    &-exit {
+        opacity: 1;
+    }
+    &-exit-active {
+        opacity: 0;
+        transition: opacity 500ms;
+    }
 }
