--- a/src/components/form/Form.scss
+++ b/src/components/form/Form.scss
@@ -13,6 +13,9 @@
     }
     &__content {
         margin-top: 18px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
     &__input {
         width: 250px;
@@ -25,7 +28,22 @@
         border: none;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
-    button {
-        float: right;
+    &__results {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 22px;
+    }
+    &__message {
+        width: 100%;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 21px;
+        color: #9F0013;
+        &_found {
+            width: 250px;
+            color: #03710E;
+        }
     }
 }
